Fix meeting agenda align

--- a/frontend/src/app/scenes/meeting-page/components/agenda/agenda.component.sass
+++ b/frontend/src/app/scenes/meeting-page/components/agenda/agenda.component.sass
@@ -9,3 +9,6 @@
     align-items: center
 .ui.header
     margin-top: 20px
+
+.no-agendas-message
+    margin-bottom: 20px
