--- a/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
+++ b/frontend/src/app/scenes/meeting-page/components/meeting/meeting.component.sass
@@ -659,7 +659,7 @@ i.icon.waiting-icon:hover
 
 .agenda-container
     position: absolute
-    bottom: 11%
+    bottom: 63px
     right: 30%
     max-height: 80%
     z-index: 0
